Cfor/CforParser.cpp

// Generated from Cfor.g4 by ANTLR 4.8


#include "CforListener.h"
#include "CforVisitor.h"

#include "CforParser.h"


using namespace antlrcpp;
using namespace antlr4;

CforParser::CforParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

CforParser::~CforParser() {
  delete _interpreter;
}

std::string CforParser::getGrammarFileName() const {
  return "Cfor.g4";
}

const std::vector<std::string>& CforParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& CforParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ForStatementContext ------------------------------------------------------------------

CforParser::ForStatementContext::ForStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CforParser::ForStatementContext::For() {
  return getToken(CforParser::For, 0);
}

CforParser::ForConditionContext* CforParser::ForStatementContext::forCondition() {
  return getRuleContext<CforParser::ForConditionContext>(0);
}

CforParser::StatementContext* CforParser::ForStatementContext::statement() {
  return getRuleContext<CforParser::StatementContext>(0);
}


size_t CforParser::ForStatementContext::getRuleIndex() const {
  return CforParser::RuleForStatement;
}

void CforParser::ForStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CforListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterForStatement(this);
}

void CforParser::ForStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CforListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitForStatement(this);
}


antlrcpp::Any CforParser::ForStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CforVisitor*>(visitor))
    return parserVisitor->visitForStatement(this);
  else
    return visitor->visitChildren(this);
}

CforParser::ForStatementContext* CforParser::forStatement() {
  ForStatementContext *_localctx = _tracker.createInstance<ForStatementContext>(_ctx, getState());
  enterRule(_localctx, 0, CforParser::RuleForStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(54);
    match(CforParser::For);
    setState(55);
    match(CforParser::T__0);
    setState(56);
    forCondition();
    setState(57);
    match(CforParser::T__1);
    setState(58);
    statement();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ForConditionContext ------------------------------------------------------------------

CforParser::ForConditionContext::ForConditionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CforParser::ExpressionContext* CforParser::ForConditionContext::expression() {
  return getRuleContext<CforParser::ExpressionContext>(0);
}

std::vector<CforParser::ForExpressionContext *> CforParser::ForConditionContext::forExpression() {
  return getRuleContexts<CforParser::ForExpressionContext>();
}

CforParser::ForExpressionContext* CforParser::ForConditionContext::forExpression(size_t i) {
  return getRuleContext<CforParser::ForExpressionContext>(i);
}


size_t CforParser::ForConditionContext::getRuleIndex() const {
  return CforParser::RuleForCondition;
}

void CforParser::ForConditionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CforListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterForCondition(this);
}

void CforParser::ForConditionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CforListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitForCondition(this);
}


antlrcpp::Any CforParser::ForConditionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CforVisitor*>(visitor))
    return parserVisitor->visitForCondition(this);
  else
    return visitor->visitChildren(this);
}

CforParser::ForConditionContext* CforParser::forCondition() {
  ForConditionContext *_localctx = _tracker.createInstance<ForConditionContext>(_ctx, getState());
  enterRule(_localctx, 2, CforParser::RuleForCondition);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(61);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << CforParser::T__0)
      | (1ULL << CforParser::T__12)
      | (1ULL << CforParser::T__21)
      | (1ULL << CforParser::T__24)
      | (1ULL << CforParser::T__25)
      | (1ULL << CforParser::T__26)
      | (1ULL << CforParser::T__27)
      | (1ULL << CforParser::T__41)
      | (1ULL << CforParser::T__42)
      | (1ULL << CforParser::Identifier)
      | (1ULL << CforParser::DigitSequence))) != 0)) {
      setState(60);
      expression(0);
    }
    setState(63);
    match(CforParser::T__2);
    setState(65);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << CforParser::T__0)
      | (1ULL << CforParser::T__12)
      | (1ULL << CforParser::T__21)
      | (1ULL << CforParser::T__24)
      | (1ULL << CforParser::T__25)
      | (1ULL << CforParser::T__26)
      | (1ULL << CforParser::T__27)
      | (1ULL << CforParser::T__41)
      | (1ULL << CforParser::T__42)
      | (1ULL << CforParser::Identifier)
      | (1ULL << CforParser::DigitSequence))) != 0)) {
      setState(64);
      forExpression(0);
    }
    setState(67);
    match(CforParser::T__2);
    setState(69);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << CforParser::T__0)
      | (1ULL << CforParser::T__12)
      | (1ULL << CforParser::T__21)
      | (1ULL << CforParser::T__24)
      | (1ULL << CforParser::T__25)
      | (1ULL << CforParser::T__26)
      | (1ULL << CforParser::T__27)
      | (1ULL << CforParser::T__41)
      | (1ULL << CforParser::T__42)
      | (1ULL << CforParser::Identifier)
      | (1ULL << CforParser::DigitSequence))) != 0)) {
      setState(68);
      forExpression(0);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ForExpressionContext ------------------------------------------------------------------

CforParser::ForExpressionContext::ForExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CforParser::AssignmentExpressionContext* CforParser::ForExpressionContext::assignmentExpression() {
  return getRuleContext<CforParser::AssignmentExpressionContext>(0);
}

CforParser::ForExpressionContext* CforParser::ForExpressionContext::forExpression() {
  return getRuleContext<CforParser::ForExpressionContext>(0);
}


size_t CforParser::ForExpressionContext::getRuleIndex() const {
  return CforParser::RuleForExpression;
}

void CforParser::ForExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CforListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterForExpression(this);
}

void CforParser::ForExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CforListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitForExpression(this);
}


antlrcpp::Any CforParser::ForExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CforVisitor*>(visitor))
    return parserVisitor->visitForExpression(this);
  else
    return visitor->visitChildren(this);
}


CforParser::ForExpressionContext* CforParser::forExpression() {
   return forExpression(0);
}

CforParser::ForExpressionContext* CforParser::forExpression(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  CforParser::ForExpressionContext *_localctx = _tracker.createInstance<ForExpressionContext>(_ctx, parentState);
  CforParser::ForExpressionContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 4;
  enterRecursionRule(_localctx, 4, CforParser::RuleForExpression, precedence);

    

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(72);
    assignmentExpression();
    _ctx->stop = _input->LT(-1);
    setState(79);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        _localctx = _tracker.createInstance<ForExpressionContext>(parentContext, parentState);
        pushNewRecursionContext(_localctx, startState, RuleForExpression);
        setState(74);

        if (!(precpred(_ctx, 1))) throw FailedPredicateException(this, "precpred(_ctx, 1)");
        setState(75);
        match(CforParser::T__3);
        setState(76);
        assignmentExpression(); 
      }
      setState(81);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

CforParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CforParser::CompoundStatementContext* CforParser::StatementContext::compoundStatement() {
  return getRuleContext<CforParser::CompoundStatementContext>(0);
}

CforParser::ExpressionStatementContext* CforParser::StatementContext::expressionStatement() {
  return getRuleContext<CforParser::ExpressionStatementContext>(0);
}


size_t CforParser::StatementContext::getRuleIndex() const {
  return CforParser::RuleStatement;
}

void CforParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CforListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void CforParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CforListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}


antlrcpp::Any CforParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CforVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

CforParser::StatementContext* CforParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 6, CforParser::RuleStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(84);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CforParser::T__4: {
        enterOuterAlt(_localctx, 1);
        setState(82);
        compoundStatement();
        break;
      }

      case CforParser::T__0:
      case CforParser::T__2:
      case CforParser::T__12:
      case CforParser::T__21:
      case CforParser::T__24:
      case CforParser::T__25:
      case CforParser::T__26:
      case CforParser::T__27:
      case CforParser::T__41:
      case CforParser::T__42:
      case CforParser::Identifier:
      case CforParser::DigitSequence: {
        enterOuterAlt(_localctx, 2);
        setState(83);
        expressionStatement();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CompoundStatementContext ------------------------------------------------------------------

CforParser::CompoundStatementContext::CompoundStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CforParser::BlockItemListContext* CforParser::CompoundStatementContext::blockItemList() {
  return getRuleContext<CforParser::BlockItemListContext>(0);
}


size_t CforParser::CompoundStatementContext::getRuleIndex() const {
  return CforParser::RuleCompoundStatement;
}

void CforParser::CompoundStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CforListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCompoundStatement(this);
}

void CforParser::CompoundStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CforListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCompoundStatement(this);
}


antlrcpp::Any CforParser::CompoundStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CforVisitor*>(visitor))
    return parserVisitor->visitCompoundStatement(this);
  else
    return visitor->visitChildren(this);
}

CforParser::CompoundStatementContext* CforParser::compoundStatement() {
  CompoundStatementContext *_localctx = _tracker.createInstance<CompoundStatementContext>(_ctx, getState());
  enterRule(_localctx, 8, CforParser::RuleCompoundStatement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(86);
    match(CforParser::T__4);
    setState(88);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << CforParser::T__0)
      | (1ULL << CforParser::T__2)
      | (1ULL << CforParser::T__4)
      | (1ULL << CforParser::T__12)
      | (1ULL << CforParser::T__21)
      | (1ULL << CforParser::T__24)
      | (1ULL << CforParser::T__25)
      | (1ULL << CforParser::T__26)
      | (1ULL << CforParser::T__27)
      | (1ULL << CforParser::T__41)
      | (1ULL << CforParser::T__42)
      | (1ULL << CforParser::Identifier)
      | (1ULL << CforParser::DigitSequence))) != 0)) {
      setState(87);
      blockItemList(0);
    }
    setState(90);
    match(CforParser::T__5);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockItemListContext ------------------------------------------------------------------

CforParser::BlockItemListContext::BlockItemListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CforParser::BlockItemContext* CforParser::BlockItemListContext::blockItem() {
  return getRuleContext<CforParser::BlockItemContext>(0);
}

CforParser::BlockItemListContext* CforParser::BlockItemListContext::blockItemList() {
  return getRuleContext<CforParser::BlockItemListContext>(0);
}


size_t CforParser::BlockItemListContext::getRuleIndex() const {
  return CforParser::RuleBlockItemList;
}

void CforParser::BlockItemListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CforListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlockItemList(this);
}

void CforParser::BlockItemListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CforListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlockItemList(this);
}


antlrcpp::Any CforParser::BlockItemListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CforVisitor*>(visitor))
    return parserVisitor->visitBlockItemList(this);
  else
    return visitor->visitChildren(this);
}


CforParser::BlockItemListContext* CforParser::blockItemList() {
   return blockItemList(0);
}

CforParser::BlockItemListContext* CforParser::blockItemList(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  CforParser::BlockItemListContext *_localctx = _tracker.createInstance<BlockItemListContext>(_ctx, parentState);
  CforParser::BlockItemListContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 10;
  enterRecursionRule(_localctx, 10, CforParser::RuleBlockItemList, precedence);

    

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(93);
    blockItem();
    _ctx->stop = _input->LT(-1);
    setState(99);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        _localctx = _tracker.createInstance<BlockItemListContext>(parentContext, parentState);
        pushNewRecursionContext(_localctx, startState, RuleBlockItemList);
        setState(95);

        if (!(precpred(_ctx, 1))) throw FailedPredicateException(this, "precpred(_ctx, 1)");
        setState(96);
        blockItem(); 
      }
      setState(101);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- BlockItemContext ------------------------------------------------------------------

CforParser::BlockItemContext::BlockItemContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CforParser::StatementContext* CforParser::BlockItemContext::statement() {
  return getRuleContext<CforParser::StatementContext>(0);
}


size_t CforParser::BlockItemContext::getRuleIndex() const {
  return CforParser::RuleBlockItem;
}

void CforParser::BlockItemContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CforListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlockItem(this);
}

void CforParser::BlockItemContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CforListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlockItem(this);
}


antlrcpp::Any CforParser::BlockItemContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CforVisitor*>(visitor))
    return parserVisitor->visitBlockItem(this);
  else
    return visitor->visitChildren(this);
}

CforParser::BlockItemContext* CforParser::blockItem() {
  BlockItemContext *_localctx = _tracker.createInstance<BlockItemContext>(_ctx, getState());
  enterRule(_localctx, 12, CforParser::RuleBlockItem);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(102);
    statement();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionStatementContext ------------------------------------------------------------------

CforParser::ExpressionStatementContext::ExpressionStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CforParser::ExpressionContext* CforParser::ExpressionStatementContext::expression() {
  return getRuleContext<CforParser::ExpressionContext>(0);
}


size_t CforParser::ExpressionStatementContext::getRuleIndex() const {
  return CforParser::RuleExpressionStatement;
}

void CforParser::ExpressionStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CforListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpressionStatement(this);
}

void CforParser::ExpressionStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CforListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpressionStatement(this);
}


antlrcpp::Any CforParser::ExpressionStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CforVisitor*>(visitor))
    return parserVisitor->visitExpressionStatement(this);
  else
    return visitor->visitChildren(this);
}

CforParser::ExpressionStatementContext* CforParser::expressionStatement() {
  ExpressionStatementContext *_localctx = _tracker.createInstance<ExpressionStatementContext>(_ctx, getState());
  enterRule(_localctx, 14, CforParser::RuleExpressionStatement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(105);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << CforParser::T__0)
      | (1ULL << CforParser::T__12)
      | (1ULL << CforParser::T__21)
      | (1ULL << CforParser::T__24)
      | (1ULL << CforParser::T__25)
      | (1ULL << CforParser::T__26)
      | (1ULL << CforParser::T__27)
      | (1ULL << CforParser::T__41)
      | (1ULL << CforParser::T__42)
      | (1ULL << CforParser::Identifier)
      | (1ULL << CforParser::DigitSequence))) != 0)) {
      setState(104);
      expression(0);
    }
    setState(107);
    match(CforParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

CforParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CforParser::AssignmentExpressionContext* CforParser::ExpressionContext::assignmentExpression() {
  return getRuleContext<CforParser::AssignmentExpressionContext>(0);
}

CforParser::ExpressionContext* CforParser::ExpressionContext::expression() {
  return getRuleContext<CforParser::ExpressionContext>(0);
}


size_t CforParser::ExpressionContext::getRuleIndex() const {
  return CforParser::RuleExpression;
}

void CforParser::ExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CforListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpression(this);
}

void CforParser::ExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CforListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpression(this);
}


antlrcpp::Any CforParser::ExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CforVisitor*>(visitor))
    return parserVisitor->visitExpression(this);
  else
    return visitor->visitChildren(this);
}


CforParser::ExpressionContext* CforParser::expression() {
   return expression(0);
}

CforParser::ExpressionContext* CforParser::expression(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  CforParser::ExpressionContext *_localctx = _tracker.createInstance<ExpressionContext>(_ctx, parentState);
  CforParser::ExpressionContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 16;
  enterRecursionRule(_localctx, 16, CforParser::RuleExpression, precedence);

    

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(110);
    assignmentExpression();
    _ctx->stop = _input->LT(-1);
    setState(117);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
        pushNewRecursionContext(_localctx, startState, RuleExpression);
        setState(112);

        if (!(precpred(_ctx, 1))) throw FailedPredicateException(this, "precpred(_ctx, 1)");
        setState(113);
        match(CforParser::T__3);
        setState(114);
        assignmentExpression(); 
      }
      setState(119);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- AssignmentExpressionContext ------------------------------------------------------------------

CforParser::AssignmentExpressionContext::AssignmentExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CforParser::ConditionalExpressionContext* CforParser::AssignmentExpressionContext::conditionalExpression() {
  return getRuleContext<CforParser::ConditionalExpressionContext>(0);
}

CforParser::UnaryExpressionContext* CforParser::AssignmentExpressionContext::unaryExpression() {
  return getRuleContext<CforParser::UnaryExpressionContext>(0);
}

CforParser::AssignmentOperatorContext* CforParser::AssignmentExpressionContext::assignmentOperator() {
  return getRuleContext<CforParser::AssignmentOperatorContext>(0);
}

CforParser::AssignmentExpressionContext* CforParser::AssignmentExpressionContext::assignmentExpression() {
  return getRuleContext<CforParser::AssignmentExpressionContext>(0);
}

tree::TerminalNode* CforParser::AssignmentExpressionContext::DigitSequence() {
  return getToken(CforParser::DigitSequence, 0);
}


size_t CforParser::AssignmentExpressionContext::getRuleIndex() const {
  return CforParser::RuleAssignmentExpression;
}

void CforParser::AssignmentExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CforListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssignmentExpression(this);
}

void CforParser::AssignmentExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CforListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssignmentExpression(this);
}


antlrcpp::Any CforParser::AssignmentExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CforVisitor*>(visitor))
    return parserVisitor->visitAssignmentExpression(this);
  else
    return visitor->visitChildren(this);
}

CforParser::AssignmentExpressionContext* CforParser::assignmentExpression() {
  AssignmentExpressionContext *_localctx = _tracker.createInstance<AssignmentExpressionContext>(_ctx, getState());
  enterRule(_localctx, 18, CforParser::RuleAssignmentExpression);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(126);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(120);
      conditionalExpression();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(121);
      unaryExpression();
      setState(122);
      assignmentOperator();
      setState(123);
      assignmentExpression();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(125);
      match(CforParser::DigitSequence);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConditionalExpressionContext ------------------------------------------------------------------

CforParser::ConditionalExpressionContext::ConditionalExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CforParser::LogicalOrExpressionContext* CforParser::ConditionalExpressionContext::logicalOrExpression() {
  return getRuleContext<CforParser::LogicalOrExpressionContext>(0);
}

CforParser::ExpressionContext* CforParser::ConditionalExpressionContext::expression() {
  return getRuleContext<CforParser::ExpressionContext>(0);
}

CforParser::ConditionalExpressionContext* CforParser::ConditionalExpressionContext::conditionalExpression() {
  return getRuleContext<CforParser::ConditionalExpressionContext>(0);
}


size_t CforParser::ConditionalExpressionContext::getRuleIndex() const {
  return CforParser::RuleConditionalExpression;
}

void CforParser::ConditionalExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CforListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConditionalExpression(this);
}
